--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "sonner-native": "^0.19.0"
+    "sonner-native": "^0.19.0",
+    "expo-dev-client": "~5.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
