--- a/app.json
+++ b/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.peaceoloruntoba.abiaataglance"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "d466911d-64d6-4787-bd25-dadbbf582df7"
+      }
     }
   }
 }
