--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@tailwindcss/postcss": "^4.1.3",
+    "abia-at-a-glance": "file:",
     "expo": "~52.0.43",
+    "expo-dev-client": "~5.0.19",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -21,8 +23,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "sonner-native": "^0.19.0",
-    "expo-dev-client": "~5.0.19"
+    "sonner-native": "^0.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
