--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/postcss": "^4.1.3",
     "abia-at-a-glance": "file:",
     "expo": "~52.0.43",
+    "expo-av": "~15.0.2",
     "expo-dev-client": "~5.0.19",
     "expo-status-bar": "~2.0.1",
+    "expo-video": "~2.0.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
